추가 최적화( 중복제거 등등)